--- a/my-react-setup/package.json
+++ b/my-react-setup/package.json
@@ -30,6 +30,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^23.4.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.4.1",
